add login with jwt
