# models/user.go
@@ -6,3 +6,15 @@ type User struct {
 	Email    string `json:"email"`
 	Password string `json:"-"`
 }
+
+type AuthUser struct {
+	ID       int    `json:"id"`
+	Name     string `json:"name"`
+	Email    string `json:"email"`
+	Password string `json:"password"`
+}
+
+type LoginRequest struct {
+	Email    string `json:"email" binding:"required" example:"iqmalr@gmail.com"`
+	Password string `json:"password" binding:"required"  example:"password"`
+}
